--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "alphanumeric-sort": "0.0.1",
+    "axios": "^0.17.1",
+    "markdown-it": "^8.4.0",
+    "markdown-it-ast": "0.0.1",
     "vue": "^2.5.2"
   },
   "devDependencies": {
