--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "alphanumeric-sort": "0.0.1",
     "axios": "^0.17.1",
+    "buefy": "^0.6.2",
     "markdown-it": "^8.4.0",
     "markdown-it-ast": "0.0.1",
     "vue": "^2.5.2"
