--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
+    "deploy": "surge -p dist/ -d wcaregs.surge.sh",
+    "deploy-staging": "surge -p dist/ -d wcaregs-staging.surge.sh",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
@@ -16,6 +18,8 @@
     "buefy": "^0.6.2",
     "markdown-it": "^8.4.0",
     "markdown-it-ast": "0.0.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "vue": "^2.5.2"
   },
   "devDependencies": {
