--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "alphanumeric-sort": "0.0.1",
     "axios": "^0.17.1",
     "buefy": "^0.6.2",
+    "fuse.js": "^3.2.0",
+    "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
     "markdown-it-ast": "0.0.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
