--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.17.1",
     "buefy": "^0.6.2",
     "fuse.js": "^3.2.0",
+    "lodash.flatten": "^4.4.0",
     "markdown-it": "^8.4.0",
     "markdown-it-ast": "0.0.1",
     "node-sass": "^4.7.2",
@@ -60,6 +61,7 @@
     "rimraf": "^2.6.2",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
+    "surge": "^0.19.0",
     "sw-precache-webpack-plugin": "^0.11.4",
     "uglify-es": "^3.1.3",
     "url-loader": "^0.6.2",
