--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "markdown-it-ast": "0.0.1",
     "node-sass": "^4.13.0",
     "sass-loader": "^6.0.6",
+    "surge": "^0.21.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -60,6 +61,7 @@
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.3.0",
     "rimraf": "^2.6.2",
+    "save": "^2.4.0",
     "semver": "^5.4.1",
     "shelljs": "^0.7.8",
     "sw-precache-webpack-plugin": "^0.11.4",
