--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "alphanumeric-sort": "^0.0.1",
+    "bulma": "^0.9.2",
     "markdown-it": "^12.0.6",
     "markdown-it-ast": "^0.0.1",
+    "node-sass": "^5.0.0",
     "react": "^17.0.2",
+    "react-bulma-components": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
