--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^12.1.10",
     "alphanumeric-sort": "^0.0.1",
     "bulma": "^0.9.2",
+    "fuse.js": "^6.4.6",
+    "lodash.flatten": "^4.4.0",
     "markdown-it": "^12.0.6",
     "markdown-it-ast": "^0.0.1",
     "node-sass": "^5.0.0",
