--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "regsAndGuides": "node regulationsAndGuidelines.js",
+    "prebuild": "yarn regsAndGuides",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "chalk": "^4.1.1"
   }
 }
