--- a/package.json
+++ b/package.json
@@ -2,37 +2,40 @@
   "name": "wcaregs",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
+    "@vitejs/plugin-react-swc": "^3.7.2",
     "alphanumeric-sort": "^0.0.1",
-    "bulma": "^0.9.2",
+    "bulma": "^1.0.3",
     "fuse.js": "^6.4.6",
     "lodash.flatten": "^4.4.0",
     "markdown-it": "^12.0.6",
     "markdown-it-ast": "^0.0.1",
-    "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-bulma-components": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "sass": "^1.83.1",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.7",
+    "vite-plugin-pwa": "^0.21.1",
+    "vite-tsconfig-paths": "^5.1.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "vite",
     "regsAndGuides": "node regulationsAndGuidelines.js",
     "prebuild": "yarn regsAndGuides",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "build": "vite build",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "type-check": "tsc --noEmit",
+    "test": "vite test"
   },
   "browserslist": {
     "production": [
