--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-src/assets/regulationsAndGuidelines.js
+src/assets/regulationsAndGuidelines.json
 
