--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "license": "MIT",
   "dependencies": {
+    "@octokit/types": "^13.7.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/react": "^19.0.4",
+    "@types/node": "^22.10.5",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "@vitejs/plugin-react-swc": "^3.7.2",
@@ -17,12 +21,15 @@
     "lodash.flatten": "^4.4.0",
     "markdown-it": "^12.0.6",
     "markdown-it-ast": "^0.0.1",
-    "react": "^17.0.2",
+    "octokit": "^4.1.0",
+    "react": "^18.2.0",
     "react-bulma-components": "^4.0.0",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6",
     "sass": "^1.83.1",
-    "typescript": "^5.7.3",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.18.2",
     "vite": "^6.0.7",
     "vite-plugin-pwa": "^0.21.1",
     "vite-tsconfig-paths": "^5.1.4",
@@ -31,7 +38,7 @@
   "scripts": {
     "dev": "vite",
     "regsAndGuides": "node regulationsAndGuidelines.js",
-    "prebuild": "yarn regsAndGuides",
+    "prebuild": "ts-node build.ts",
     "build": "vite build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "type-check": "tsc --noEmit",
