--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "bulma": "^1.0.3",
+    "classnames": "^2.5.1",
     "fuse.js": "^6.4.6",
     "markdown-it": "^12.0.6",
     "markdown-it-ast": "^0.0.1",
@@ -44,9 +45,9 @@
     "@typescript-eslint/parser": "^8.19.1",
     "chalk": "^4.1.1",
     "eslint": "^9.17.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.2",
